--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Vendor/AFNetworking"]
 	path = Vendor/AFNetworking
-	url = https://github.com/AFNetworking/AFNetworking.git
+	url = git@github.com:AFNetworking/AFNetworking.git
+[submodule "Vendor/SSKeychain"]
+	path = Vendor/SSKeychain
+	url = git@github.com:soffes/sskeychain.git
