--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "Vendor/OCMock"]
 	path = Vendor/OCMock
 	url = git@github.com:erikdoe/ocmock.git
+[submodule "Vendor/Specta"]
+	path = Vendor/Specta
+	url = git@github.com:petejkim/specta.git
+[submodule "Vendor/Expecta"]
+	path = Vendor/Expecta
+	url = git@github.com:petejkim/expecta.git
